feat(gifts): add list filters
